# lsd_detect

./: .gitignore  CMakeLists.txt  main.cpp  package.xml
include/: ExtractLineSegment.h  auxiliar.h  config.h  gridStructure.h  matching.h  stereoFeatures.h
src/: ExtractLineSegment.cpp  config.cpp  gridStructure.cpp  matching.cpp  stereoFeatures.cpp
